--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,148 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+#Home {
+    background-color: #E5E1DA;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.welcome-text {
+    min-height: 50vh;
+    /* padding-bottom: 50rem; */
+}
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+html, body {
+    margin: 0;
+    padding: 0;
+    background-color: #E5E1DA;
+}
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+.dk-logo {
+    width: 125px; /* Set the desired width */
+    height: auto;
+}
 
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
+@media (min-width: 768px) {
+    .input-group-text {
+        width: 12.31%;
+    }
+}
+
+@media (max-width: 768px) {
+    .input-group-text {
+        width: 30%;
+    }
+}
+
+@media (max-width: 576px) {
+    .input-group-text {
+        width: 35%;
+    }
+}
+
+@media (min-width: 768px) {
+    .input-group-text-date {
+        width: 28%;
+    }
+}
+
+@media (max-width: 768px) {
+    .input-group-text-date {
+        width: 55%;
+    }
+}
+
+@media (max-width: 576px) {
+    .input-group-text-date {
+        width: 35%;
+    }
+}
+
+.header-span {
+    width: 100%;
+}
+
+@media (min-width: 768px) {
+    .input-group-text {
+        width: 15%;
+    }
+}
+
+@media (max-width: 768px) {
+    .input-group-text {
+        width: 30%;
+    }
+}
+
+@media (max-width: 576px) {
+    .input-group-text {
+        width: 35%;
+    }
+}
+
+.Cboxlabel:hover {
+    cursor: pointer;
+}
+
+.table-container {
+    padding-left: 20rem;
+    padding-right: 20rem;
+}
+
+/* .player-result {
+    background-color: rgb(255, 255, 255);
+} */
+
+.player-result:hover {
+    cursor: pointer;
+    opacity: 80%;
+}
+
+.table-body {
+    max-height: 5rem;
+    overflow-y: auto;
+}
+
+.column-cell {
+    margin: 0;
+    padding: 0;
   }
+
+.table-div {
+    max-height: 425px;
+    overflow-y: auto;
+    overflow-x: auto;
+
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+.table-div-results {
+    max-height: 200vh;
+    overflow-y: auto;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+
+.text-success {
+    color: rgb(89, 255, 0);
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.table-div-main {
+    max-height: 200vh;
+    overflow-y: auto;
+    margin-bottom: 15rem;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.opp-team-cell {
+    color: inherit;
+    text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.opp-team-cell:hover {
+    color: inherit;
+    text-decoration: underline;
+    text-decoration-color: black;
+}
+
+.game-link:hover {
+    text-decoration: underline;
+    text-decoration-color: black;
+}
+
+.game-link {
+    text-decoration: none;
 }
